--- a/index-3.html
+++ b/index-3.html
@@ -2,11 +2,11 @@
   <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>Home Page 2</title>
+  	<title>Home Page 3</title>
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
-  	<link rel="shortcut icon" href="assets/img/logo/fv-2.svg" type="image/x-icon">
+  	<link rel="shortcut icon" href="assets/img/logo/fv-1.svg" type="image/x-icon">
   	<!-- Mobile Specific Meta -->
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
 
 <!-- Start of Header section
 	============================================= --> 
-	<header id="vt-header" class="vt-header-section header_style_one">
+	<header id="vt-header" class="vt-header-section header_style_one txa_sticky_header">
 		<div class="header-top-area">
 			<div class="container">
 				<div class="header-top d-flex justify-content-between">
@@ -141,9 +141,9 @@
 
 <!-- Start of Banner section
 	============================================= -->
-	<section id="vt-banner-2" class="vt-banner-section-2">
-		<div class="vt-banner-content-2 position-relative">
-			<div class="vt-banner-globe position-absolute"><img src="assets/img/shape/globe.svg" alt=""></div>
+	<section id="vt-banner-2" class="vt-banner-section-2 txt_item_active">
+		<div class="vt-banner-content-2 txt_item_active position-relative">
+			<div class="vt-banner-globe appear_top position-absolute"><img src="assets/img/shape/globe.svg" alt=""></div>
 			<div class="vt-banner-img position-absolute">
 				<div class="item-img">
 					<img src="assets/img/bg/hero-3.jpg" alt="">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="vt-banner-text headline pera-content">
+			<div class="vt-banner-text  headline pera-content">
 				<div class="container">
 					<div class="banner-slug">
 						Experience Creative Freedom
@@ -165,12 +165,12 @@
 				</div>
 				<div class="banner_heading">
 					<div class="container">
-						<h1 class="banner_title">Transforming Businesses with Expertise.</h1>
+						<h1 class="tx-split-text banner_title banner_title_line">Transforming Businesses with Expertise.</h1>
 					</div>
 				</div>
-				<div class="container">
+				<div class="container vt-text">
 					<p>Our consulting service drives growth, enhances efficiency, and transforms businesses for lasting success.</p>
-					<div class="vt-btn text-capitalize">
+					<div class="vt-btn  btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 						<a href="#">Browse All Services</a>
 					</div>
 				</div>
@@ -185,10 +185,10 @@
 	<section id="vt-service-7" class="vt-service-section-7 pt-120 pb-190">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Our Unique Way
 				</div>
-				<h2 class="section_title">Accelerating Future Growth with Technology, Innovation, and Expertise</h2>
+				<h2 class="section_title vt-title vt-title-ani">Accelerating Future Growth with Technology, Innovation, and Expertise</h2>
 			</div>
 		</div>
 		<div class="vt-service-content-6 pt-50">
@@ -382,18 +382,18 @@
 	<section id="vt-about-2" class="vt-about-section-2 position-relative">
 		<div class="container">
 			<div class="vt-about-title headline">
-				<h2 class="ab_title">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
+				<h2 class="ab_title vt-title vt-title-ani">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
 			</div>
 			<div class="vt-about-top-content d-flex flex-wrap justify-content-between">
 				<div class="vt-section-title ver_2 headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 						We're Vertexify Consulting
 					</div>
 				</div>
-				<div class="top-text">
-					Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.
+				<div class="top-text pera-content vt-text">
+					<p>Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.</p>
 				</div>
-				<div class="vt-btn mt-30 text-capitalize">
+				<div class="vt-btn mt-30 btn-spin">
 					<a href="#">Know About Us</a>
 				</div>
 			</div>
@@ -412,7 +412,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="vt-about-counter-2 ver_2 mt-35 d-flex justify-content-center">
+			<div class="vt-about-counter-2 ver_2 mt-35 d-flex justify-content-center appear_top">
 				<div class="vt-about-counter d-flex position-relative">
 					<div class="vt-counter-item headline pera-content d-flex align-items-end">
 						<h3><span class="counter">13</span><b>+</b></h3>
@@ -439,18 +439,18 @@
 		<div class="container">
 			<div class="vt-service-content-8 d-flex justify-content-between">
 				<div class="vt-service-text-wrap-8">
-					<div class="vt-section-title ver_2 headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title vt-text ver_2 headline pera-content">
+						<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 							Expert Consulting Solutions
 						</div>
-						<h2 class="section_title">Accelerate into the future.</h2>
+						<h2 class="section_title vt-title vt-title-ani">Accelerate into the future.</h2>
 						<p>We provide comprehensive corporate business services, focusing on strategic growth, operational efficiency, and sustainable practices to ensure long-term success and profitability.</p>
-						<div class="vt-btn mt-30 text-capitalize">
+						<div class="vt-btn mt-30 btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 							<a href="#">Browse All Services</a>
 						</div>
 					</div>
 				</div>
-				<div class="vt-service-item-list ul-li-block">
+				<div class="vt-service-item-list appear_top ul-li-block">
 					<ul>
 						<li><a href="#">HR Development</a></li>
 						<li><a href="#">Marketing Strategy</a></li>
@@ -468,23 +468,23 @@
 
 <!-- Start of Get In Touch section
 	============================================= -->
-	<section id="vt-get-in-touch-2" class="vt-get-in-touch-section-2 section_border_radius pt-165 pb-120 position-relative">
+	<section id="vt-get-in-touch-2" class="vt-get-in-touch-section-2 appear_top section_border_radius pt-165 pb-120 position-relative">
 		<div class="vt-get-in-touch-bg position-absolute">
-			<div class="item-bg">
+			<div class="item-bg img-parallax">
 				<img src="assets/img/about/get-in.jpg" alt="">
 			</div>
 			<span class="logo_shape position-absolute"><img src="assets/img/shape/logo_shape.png" alt=""></span>
 		</div>
 		<div class="container">
 			<div class="vt-get-in-touch-text-2">
-				<div class="vt-section-title ver_2 headline pera-content">
-					<div class="subtitle">
+				<div class="vt-section-title vt-text ver_2 headline pera-content">
+					<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 						Expert Consulting Solutions
 					</div>
-					<h2 class="section_title">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
+					<h2 class="section_title vt-title vt-title-ani">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
 					<p>Our business consulting services aim to optimize operations and strategies, driving growth and ensuring sustained organizational success and development.</p>
 				</div>
-				<div class="vt-btn mt-30 text-capitalize">
+				<div class="vt-btn mt-30 btn-spin wow fadeInUp"  data-wow-delay="600ms" data-wow-duration="1000ms">
 					<a href="#">Get in Touch</a>
 				</div>
 			</div>
@@ -502,12 +502,12 @@
 		<div class="container">
 			<div class="vt-testimonial-content-2">
 				<div class="vt-section-title ver_2 headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 						Client Testimonials
 					</div>
-					<h2 class="section_title">Clients Share Their Success Stories </h2>
+					<h2 class="section_title vt-title vt-title-ani">Clients Share Their Success Stories </h2>
 				</div>
-				<div class="vt-testimonial-slider-2 swiper-container">
+				<div class="vt-testimonial-slider-2 top_view swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="vt-testimonial-item ver_2 ul-li headline pera-content">
@@ -590,14 +590,14 @@
 	<section id="vt-blog-2" class="vt-blog-section-2 section_border_radius pt-120 pb-120">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 					News &amp; Blogs
 				</div>
-				<h2 class="section_title">Press Releases Drive Success</h2>
+				<h2 class="section_title vt-title vt-title-ani">Press Releases Drive Success</h2>
 			</div>
 			<div class="vt-blog-content pt-50 justify-content-center">
 				<div class="row justify-content-center">
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img position-relative">
@@ -614,7 +614,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img position-relative">
@@ -631,7 +631,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img position-relative">
@@ -649,7 +649,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn mt-15 text-capitalize text-center">
+				<div class="vt-btn mt-15 btn-spin text-center">
 					<a href="#">Browse All News</a>
 				</div>
 			</div>
@@ -663,10 +663,10 @@
 	<section id="vt-faq" class="vt-faq-section section_border_radius pt-120 pb-120 position-relative">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline text-center pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 					Frequently Asked Questions
 				</div>
-				<h2 class="section_title">Answers to Common Corporate Business Questions</h2>
+				<h2 class="section_title vt-title vt-title-ani">Answers to Common Corporate Business Questions</h2>
 			</div>
 			<div class="vt-faq-content">
 				<div class="vt-faq-item-area">
@@ -764,11 +764,11 @@
 		<div class="container">
 			<div class="vt-contact-content d-flex">
 				<div class="vt-contact-text-wrap">
-					<div class="vt-section-title ver_2 headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title vt-text ver_2 headline pera-content">
+						<div class="subtitle wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
 							Contact Us
 						</div>
-						<h2 class="section_title">Get in Touch with Us Today</h2>
+						<h2 class="section_title vt-title vt-title-ani">Get in Touch with Us Today</h2>
 						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
 					</div>
 					<div class="vt-contact-partner pera-content">
@@ -838,19 +838,19 @@
 							</div>
 							<div class="vt-contact-form-input">
 								<div class="input-field">
-									<label class="text-uppercase">Name</label>
+									<label class="f-lebel text-uppercase">Name</label>
 									<input type="text" placeholder="e.g. Oliver Spiteri">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Phone</label>
+									<label class="f-lebel text-uppercase">Phone</label>
 									<input type="text" placeholder="e.g. +1 877 217 8371">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Email</label>
+									<label class="f-lebel text-uppercase">Email</label>
 									<input type="text" placeholder="example@email.com">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Message</label>
+									<label class="f-lebel text-uppercase">Message</label>
 									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
 								</div>
 							</div>
@@ -866,33 +866,37 @@
 
 <!-- Start of Get in touch  section
 	============================================= -->
-	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative section_border_radius" data-background="assets/img/bg/get-bg.png">
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.png">
+		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
+		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
 		<div class="container">
-			<div class="vt-section-title ver_2 headline text-center pera-content">
-				<div class="subtitle">
-					Get in Touch
+			<div class="vt-get-in-touch-wrap appear_top">
+				<div class="vt-section-title headline text-center pera-content">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+						Get in Touch
+					</div>
+					<h2 class="section_title vt-title vt-title-ani">Interested in working together?</h2>
 				</div>
-				<h2 class="section_title">Interested in working together?</h2>
-			</div>
-			<div class="vt-get-in-touch-content d-flex justify-content-center text-center flex-wrap">
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Address:</h3>
-					<p>327 Park Ave S,
-					New York, NY 10010</p>
+				<div class="vt-get-in-touch-content  d-flex justify-content-center text-center flex-wrap">
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Address:</h3>
+						<p>327 Park Ave S,
+						New York, NY 10010</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Hours:</h3>
+						<p>Mon-Fri: 9 AM to 5 PM
+						Sun: Closed</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Phone:</h3>
+						<p>+1 917 265 8444</p>
+					</div>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Hours:</h3>
-					<p>Mon-Fri: 9 AM to 5 PM
-					Sun: Closed</p>
+				<div class="vt-btn mt-35 btn-spin text-center">
+					<a href="#">Free Consultation</a>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Phone:</h3>
-					<p>+1 917 265 8444</p>
-				</div>
-			</div>
-			<div class="vt-btn mt-35 text-capitalize text-center">
-				<a href="#">Free Consultation</a>
-			</div>
+			</div> 
 		</div>
 	</section>		
 <!-- End of Get in touch  section
