--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
-  	<link rel="shortcut icon" href="assets/img/logo/f-icon.png" type="image/x-icon">
+  	<link rel="shortcut icon" href="assets/img/logo/fv-1.svg" type="image/x-icon">
   	<!-- Mobile Specific Meta -->
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -888,7 +888,7 @@
 			</div>
 			<div class="vt-blog-content pt-50 justify-content-center">
 				<div class="row justify-content-center">
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item">
 							<div class="item-img">
 								<img src="assets/img/blog/blg1.jpg" alt="">
@@ -902,7 +902,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item">
 							<div class="item-img">
 								<img src="assets/img/blog/blg2.jpg" alt="">
@@ -916,7 +916,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item">
 							<div class="item-img">
 								<img src="assets/img/blog/blg3.jpg" alt="">
@@ -1026,7 +1026,7 @@
 					</div>
 				</div>
 				<div class="vt-faq-bottom mt-50 text-center pera-content">
-					<p>Don't see your question? <span>Jump in our Slack!</span></p>
+					<p>Don't see your question? <a>Jump in our Slack!</a></p>
 					<div class="vt-btn mt-20 btn-spin text-center">
 						<a href="#">Get in Touch</a>
 					</div>
@@ -1045,17 +1045,17 @@
 			<span></span>
 			<span></span>
 		</div>
-		<div class="contact-img position-absolute">
+		<div class="contact-img  position-absolute">
 			<img src="assets/img/bg/contact.png" alt="">
 		</div>
 		<div class="container">
 			<div class="vt-contact-content d-flex">
 				<div class="vt-contact-text-wrap">
-					<div class="vt-section-title headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title headline pera-content vt-text">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							Contact Us
 						</div>
-						<h2 class="section_title">Get in Touch with Us Today</h2>
+						<h2 class="section_title vt-title vt-title-ani">Get in Touch with Us Today</h2>
 						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
 					</div>
 					<div class="vt-contact-partner pera-content">
@@ -1125,19 +1125,19 @@
 							</div>
 							<div class="vt-contact-form-input">
 								<div class="input-field">
-									<label class="text-uppercase">Name</label>
+									<label class="f-lebel text-uppercase">Name</label>
 									<input type="text" placeholder="e.g. Oliver Spiteri">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Phone</label>
+									<label class="f-lebel text-uppercase">Phone</label>
 									<input type="text" placeholder="e.g. +1 877 217 8371">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Email</label>
+									<label class="f-lebel text-uppercase">Email</label>
 									<input type="text" placeholder="example@email.com">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Message</label>
+									<label class="f-lebel text-uppercase">Message</label>
 									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
 								</div>
 							</div>
@@ -1153,33 +1153,37 @@
 
 <!-- Start of Get in touch  section
 	============================================= -->
-	<section id="vt-get-in-touch" class="vt-get-in-touch-section" data-background="assets/img/bg/get-bg.png">
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.png">
+		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
+		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
 		<div class="container">
-			<div class="vt-section-title headline text-center pera-content">
-				<div class="subtitle">
-					Get in Touch
+			<div class="vt-get-in-touch-wrap appear_top">
+				<div class="vt-section-title headline text-center pera-content">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+						Get in Touch
+					</div>
+					<h2 class="section_title vt-title vt-title-ani">Interested in working together?</h2>
 				</div>
-				<h2 class="section_title">Interested in working together?</h2>
-			</div>
-			<div class="vt-get-in-touch-content d-flex justify-content-center text-center flex-wrap">
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Address:</h3>
-					<p>327 Park Ave S,
-					New York, NY 10010</p>
+				<div class="vt-get-in-touch-content  d-flex justify-content-center text-center flex-wrap">
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Address:</h3>
+						<p>327 Park Ave S,
+						New York, NY 10010</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Hours:</h3>
+						<p>Mon-Fri: 9 AM to 5 PM
+						Sun: Closed</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Phone:</h3>
+						<p>+1 917 265 8444</p>
+					</div>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Hours:</h3>
-					<p>Mon-Fri: 9 AM to 5 PM
-					Sun: Closed</p>
+				<div class="vt-btn mt-35 btn-spin text-center">
+					<a href="#">Free Consultation</a>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Phone:</h3>
-					<p>+1 917 265 8444</p>
-				</div>
-			</div>
-			<div class="vt-btn mt-35 text-capitalize text-center">
-				<a href="#">Free Consultation</a>
-			</div>
+			</div> 
 		</div>
 	</section>		
 <!-- End of Get in touch  section
@@ -1188,7 +1192,7 @@
 <!-- Start of footer  section
 	============================================= -->
 	<footer id="vt-footer" class="vt-footer-section position-relative">
-		<span class="vt-footer-shape position-absolute"><img src="assets/img/shape/logo_shape.svg" alt=""></span>
+		<span class="vt-footer-shape appear_top position-absolute"><img src="assets/img/shape/logo_shape.svg" alt=""></span>
 		<div class="container">
 			<div class="vt-footer-content position-relative">
 				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
@@ -1293,47 +1297,5 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
-	<script>
-		setTimeout(() => {
-			var a = document.querySelectorAll(".btn-spin a");
-			a.forEach(function (a) {
-				a.addEventListener("mouseover", function () {
-					var c, b, d;
-					!a.classList.contains("animating") &&
-					!a.classList.contains("mouseover") &&
-					(a.classList.add("animating", "mouseover"),
-						(c = a.innerText.split("")),
-						setTimeout(function () {
-							a.classList.remove("animating");
-						}, (c.length + 1) * 50),
-						(b = a.dataset.animation),
-						b || (b = "vt-spin"),
-						(a.innerText = ""),
-						c.forEach(function (b) {
-							b == " " && (b = "&nbsp;"), (a.innerHTML += '<span class="letter">' + b + "</span>");
-						}),
-						(d = a.querySelectorAll(".letter")),
-						d.forEach(function (a, c) {
-							setTimeout(function () {
-								a.classList.add(b);
-							}, 50 * c);
-						}));
-				}),
-				a.addEventListener("mouseout", function () {
-					a.classList.remove("mouseover");
-				});
-			});
-		}, 100);
-	</script>
-	<script>
-		$('.btn-text-nina').each(function() {
-			var b = .045,
-			c = $(this).children().length,
-			d = c - 1;
-			$(this).find('> .pxl--btn-text > span').each(function(c, d) {
-				$(this).css('transition-delay', b + 's'), b = b + .045
-			})
-		})
-	</script>
 </body>
 </html>  
