--- a/index-2.html
+++ b/index-2.html
@@ -29,7 +29,7 @@
 
 <!-- Start of Header section
 	============================================= --> 
-	<header id="vt-header" class="vt-header-section header_style_one dark_version">
+	<header id="vt-header" class="vt-header-section header_style_one txa_sticky_header dark_version">
 		<div class="header-top-area">
 			<div class="container">
 				<div class="header-top d-flex justify-content-between">
@@ -147,20 +147,20 @@
 
 <!-- Start of Banner section
 	============================================= -->
-	<section id="vt-banner" class="vt-banner-section item-view position-relative dark_version">
+	<section id="vt-banner" class="vt-banner-section txt_item_active item-view position-relative dark_version">
 		<div class="vt-vertical-shape txt_item_active"></div>
 		<div class="bt-banner-img position-absolute">
 			<img src="assets/img/bg/hero-2.jpg" alt="">
 		</div>
 		<div class="container">
-			<div class="vt-banner-text dark_version headline pera-content">
+			<div class="vt-banner-text dark_version vt-text headline pera-content">
 				<div class="banner-slug">
 					Experience Creative Freedom
 				</div>
-				<h1 class="banner_title">Transforming Businesses with Expertise.</h1>
+				<h1 class="tx-split-text banner_title banner_title_line">Transforming Businesses with Expertise.</h1>
 				<p>Our consulting service drives growth, enhances efficiency, and transforms businesses for lasting success.</p>
-				<div class="vt-btn text-capitalize">
-					<a href="#">Browse All Services</a>
+				<div class="vt-btn  btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
+					<a  href="#">Browse All Services</a>
 				</div>
 			</div>
 		</div>
@@ -175,16 +175,16 @@
 			<div class="container">
 				<div class="vt-service-top-content d-flex justify-content-between flex-wrap align-items-center">
 					<div class="vt-section-title ver_2 headline pera-content">
-						<div class="subtitle">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							Our Unique Way
 						</div>
-						<h2 class="section_title">Accelerating Future Growth with Technology, Innovation, and Expertise</h2>
+						<h2 class="section_title vt-title vt-title-ani">Accelerating Future Growth with Technology, Innovation, and Expertise</h2>
 					</div>
-					<div class="vt-btn mt-15 text-capitalize">
+					<div class="vt-btn btn-spin mt-15 ">
 						<a href="#">Browse All Services</a>
 					</div>
 				</div>
-				<div class="vt-service-item-content-4 pt-50 d-flex justify-content-end">
+				<div class="vt-service-item-content-4 appear_left pt-50 d-flex justify-content-end">
 					<div class="vt-service-item-area d-flex">
 						<div class="vt-service-item-4 position-relative headline pera-content">
 							<h3 class="ser_title href-underline"><a href="#">Collaboration</a></h3>
@@ -198,7 +198,6 @@
 							<h3 class="ser_title href-underline"><a href="#">Methodologies</a></h3>
 							<p>We implement effective methodologies to ensure growth and operational efficiency.</p>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -212,18 +211,18 @@
 	<section id="vt-about-2" class="vt-about-section-2 pt-60 pb-40">
 		<div class="container">
 			<div class="vt-about-title headline">
-				<h2 class="ab_title">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
+				<h2 class="ab_title vt-title vt-title-ani">Transform Your Business with Expert Consulting for Sustainable Growth and Efficiency</h2>
 			</div>
 			<div class="vt-about-top-content d-flex flex-wrap justify-content-between">
 				<div class="vt-section-title ver_2 headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 						We're Vertexify Consulting
 					</div>
 				</div>
-				<div class="top-text">
-					Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.
+				<div class="top-text pera-content vt-text">
+					<p>Our expert business consulting services drive sustainable growth, enhance operational efficiency, and provide strategic insights to help your company achieve long-term success and profitability.</p>
 				</div>
-				<div class="vt-btn mt-30 text-capitalize">
+				<div class="vt-btn btn-spin mt-30 text-capitalize">
 					<a href="#">Know About Us</a>
 				</div>
 			</div>
@@ -265,16 +264,16 @@
 
 <!-- Start of Service section
 	============================================= -->
-	<section id="vt-service-5" class="vt-service-section-5 position-relative pt-120 pb-130">
+	<section id="vt-service-5" class="vt-service-section-5 position-relative pt-120 pb-120">
 		<div class="vt-service-pattern position-absolute">
 			<img src="assets/img/bg/pattern.png" alt="">
 		</div>
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Expert Consulting Solutions
 				</div>
-				<h2 class="section_title">Accelerate into the future.</h2>
+				<h2 class="section_title vt-title vt-title-ani">Accelerate into the future.</h2>
 			</div>
 			<div class="vt-service-tab-content pt-60">
 				<div class="vt-service-tab-btn-area d-flex justify-content-end">
@@ -392,10 +391,10 @@
 	<section id="vt-service-6" class="vt-service-section-6 pt-120 pb-120">
 		<div class="container">
 			<div class="vt-section-title ver_2 headline pera-content">
-				<div class="subtitle">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Industries we serve
 				</div>
-				<h2 class="section_title">We offer expert consulting for strategic growth and operational excellence solutions.</h2>
+				<h2 class="section_title vt-title vt-title-ani">We offer expert consulting for strategic growth and operational excellence solutions.</h2>
 			</div>
 		</div>
 		<div class="vt-service-content-6 pt-50">
@@ -521,7 +520,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="vt-btn mt-50 text-center text-capitalize">
+		<div class="vt-btn btn-spin mt-50 text-center">
 			<a href="#">Know About Us</a>
 		</div>
 	</section>
@@ -537,13 +536,13 @@
 			</div>
 			<div class="vt-why-choose-text dark_version">
 				<div class="vt-section-title headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 						We're Vertexify Consulting
 					</div>
-					<h2 class="section_title">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
+					<h2 class="section_title vt-title vt-title-ani">Comprehensive Business Consulting Services for Growth and Efficiency</h2>
 				</div>
 				<div class="vt-why-choose-ft-item-area">
-					<div class="vt-why-choose-ft-item dark_version d-flex">
+					<div class="vt-why-choose-ft-item top_view dark_version d-flex">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M24 4L4 14L24 24L44 14L24 4Z" stroke="#C9F7CA" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -556,7 +555,7 @@
 							<p>We offer strategic planning to drive sustainable growth, operational efficiency, and long-term success.</p>
 						</div>
 					</div>
-					<div class="vt-why-choose-ft-item dark_version d-flex">
+					<div class="vt-why-choose-ft-item top_view dark_version d-flex">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<g clip-path="url(#clip0_69_2963)">
@@ -576,7 +575,7 @@
 							<p>We optimize operations to enhance efficiency, reduce costs, and improve overall performance.</p>
 						</div>
 					</div>
-					<div class="vt-why-choose-ft-item dark_version d-flex">
+					<div class="vt-why-choose-ft-item top_view dark_version d-flex">
 						<div class="item-icon">
 							<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M40 14H8C5.79086 14 4 15.7909 4 18V38C4 40.2091 5.79086 42 8 42H40C42.2091 42 44 40.2091 44 38V18C44 15.7909 42.2091 14 40 14Z" stroke="#C9F7CA" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -589,7 +588,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn mt-45 text-capitalize">
+				<div class="vt-btn btn-spin mt-45">
 					<a href="#">Schedule a Consultation</a>
 				</div>
 			</div>
@@ -607,12 +606,12 @@
 		<div class="container">
 			<div class="vt-testimonial-content-2">
 				<div class="vt-section-title ver_2 headline pera-content">
-					<div class="subtitle">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 						Client Testimonials
 					</div>
-					<h2 class="section_title">Clients Share Their Success Stories </h2>
+					<h2 class="section_title vt-title vt-title-ani">Clients Share Their Success Stories </h2>
 				</div>
-				<div class="vt-testimonial-slider-2 swiper-container">
+				<div class="vt-testimonial-slider-2 appear_top swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="vt-testimonial-item ver_2 ul-li headline pera-content">
@@ -698,11 +697,11 @@
 				<div class="subtitle">
 					News &amp; Blogs
 				</div>
-				<h2 class="section_title">Press Releases Drive Success</h2>
+				<h2 class="section_title vt-title vt-title-ani">Press Releases Drive Success</h2>
 			</div>
 			<div class="vt-blog-content pt-50 justify-content-center">
 				<div class="row justify-content-center">
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img">
@@ -718,7 +717,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img">
@@ -734,7 +733,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6 wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1200ms">
 						<div class="vt-blog-item ver_2">
 							<div class="item-img-meta position-relative">
 								<div class="item-img">
@@ -751,7 +750,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn mt-15 text-capitalize text-center">
+				<div class="vt-btn mt-15 btn-spin text-center">
 					<a href="#">Browse All News</a>
 				</div>
 			</div>
@@ -765,11 +764,11 @@
 	============================================= -->
 	<section id="vt-faq" class="vt-faq-section pt-120 pb-120 position-relative">
 		<div class="container">
-			<div class="vt-section-title headline text-center pera-content">
-				<div class="subtitle">
+			<div class="vt-section-title ver_2 headline text-center pera-content">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="300ms" data-wow-duration="1200ms">
 					Frequently Asked Questions
 				</div>
-				<h2 class="section_title">Answers to Common Corporate Business Questions</h2>
+				<h2 class="section_title vt-title vt-title-ani">Answers to Common Corporate Business Questions</h2>
 			</div>
 			<div class="vt-faq-content">
 				<div class="vt-faq-item-area">
@@ -847,8 +846,8 @@
 					</div>
 				</div>
 				<div class="vt-faq-bottom mt-50 text-center pera-content">
-					<p>Don't see your question? Jump in our Slack!</p>
-					<div class="vt-btn mt-20 text-capitalize text-center">
+					<p>Don't see your question? <a href="#">Jump in our Slack!</a></p>
+					<div class="vt-btn mt-20 btn-spin text-center">
 						<a href="#">Get in Touch</a>
 					</div>
 				</div>
@@ -867,11 +866,11 @@
 		<div class="container">
 			<div class="vt-contact-content d-flex">
 				<div class="vt-contact-text-wrap">
-					<div class="vt-section-title headline pera-content">
-						<div class="subtitle">
+					<div class="vt-section-title ver_2 headline pera-content">
+						<div class="subtitle wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1200ms">
 							Contact Us
 						</div>
-						<h2 class="section_title">Get in Touch with Us Today</h2>
+						<h2 class="section_title vt-title vt-title-ani">Get in Touch with Us Today</h2>
 						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
 					</div>
 					<div class="vt-contact-partner pera-content">
@@ -941,19 +940,19 @@
 							</div>
 							<div class="vt-contact-form-input">
 								<div class="input-field">
-									<label class="text-uppercase">Name</label>
+									<label class="f-lebel text-uppercase">Name</label>
 									<input type="text" placeholder="e.g. Oliver Spiteri">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Phone</label>
+									<label class="f-lebel text-uppercase">Phone</label>
 									<input type="text" placeholder="e.g. +1 877 217 8371">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Email</label>
+									<label class="f-lebel text-uppercase">Email</label>
 									<input type="text" placeholder="example@email.com">
 								</div>
 								<div class="input-field">
-									<label class="text-uppercase">Message</label>
+									<label class="f-lebel text-uppercase">Message</label>
 									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
 								</div>
 							</div>
@@ -969,33 +968,37 @@
 
 <!-- Start of Get in touch  section
 	============================================= -->
-	<section id="vt-get-in-touch" class="vt-get-in-touch-section" data-background="assets/img/bg/get-bg.png">
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.png">
+		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
+		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
 		<div class="container">
-			<div class="vt-section-title headline text-center pera-content">
-				<div class="subtitle">
-					Get in Touch
+			<div class="vt-get-in-touch-wrap appear_top">
+				<div class="vt-section-title headline text-center pera-content">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+						Get in Touch
+					</div>
+					<h2 class="section_title vt-title vt-title-ani">Interested in working together?</h2>
 				</div>
-				<h2 class="section_title">Interested in working together?</h2>
-			</div>
-			<div class="vt-get-in-touch-content d-flex justify-content-center text-center flex-wrap">
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Address:</h3>
-					<p>327 Park Ave S,
-					New York, NY 10010</p>
+				<div class="vt-get-in-touch-content  d-flex justify-content-center text-center flex-wrap">
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Address:</h3>
+						<p>327 Park Ave S,
+						New York, NY 10010</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Hours:</h3>
+						<p>Mon-Fri: 9 AM to 5 PM
+						Sun: Closed</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Phone:</h3>
+						<p>+1 917 265 8444</p>
+					</div>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Hours:</h3>
-					<p>Mon-Fri: 9 AM to 5 PM
-					Sun: Closed</p>
+				<div class="vt-btn mt-35 btn-spin text-center">
+					<a href="#">Free Consultation</a>
 				</div>
-				<div class="vt-get-in-touch-item headline pera-content">
-					<h3>Phone:</h3>
-					<p>+1 917 265 8444</p>
-				</div>
-			</div>
-			<div class="vt-btn mt-35 text-capitalize text-center">
-				<a href="#">Free Consultation</a>
-			</div>
+			</div> 
 		</div>
 	</section>		
 <!-- End of Get in touch  section
@@ -1005,7 +1008,7 @@
 <!-- Start of footer  section
 	============================================= -->
 	<footer id="vt-footer" class="vt-footer-section position-relative dark_version">
-		<span class="vt-footer-shape position-absolute"><img src="assets/img/shape/logo_shape_2.svg" alt=""></span>
+		<span class="vt-footer-shape appear_top position-absolute"><img src="assets/img/shape/logo_shape_2.svg" alt=""></span>
 		<div class="container">
 			<div class="vt-footer-content position-relative">
 				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
@@ -1108,19 +1111,5 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
-	<script>
-		jQuery(document).ready(function ($) {
-			$('#pills-tab[data-mouse="hover"] a').hover(function(){
-				$(this).tab('show');
-			});
-			$('a[data-toggle="pill"]').on('shown.bs.tab', function (e) {
-				var target = $(e.relatedTarget).attr('href');
-				$(target).removeClass('active');
-			})
-		});
-	</script>
-	<script>
-		
-	</script>
 </body>
 </html>  	
