--- a/index-2.html
+++ b/index-2.html
@@ -1358,7 +1358,7 @@
 
 <!-- Start of Get in touch  section
 	============================================= -->
-	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.png">
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.jpg">
 		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
 		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
 		<div class="container">
