--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			</div>
 		</div>
 	</header>
-	<!-- Mobile cart start -->
+	<!-- Mobile Menu -->
 	<div class="mobile_menu lenis lenis-smooth position-relative">
 		<div class="mobile_menu_wrap">
 			<div class="mobile_menu_overlay open_mobile_menu"></div>
@@ -503,8 +503,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- offcanvas-end -->
-
 	<!-- search-popup -->
 	<div class="txa-search-box search_box_active ">
 
@@ -531,16 +529,18 @@
 		<button aria-label="search-close" type="button" class="txa-search-box-close search_box_close">
 			<i class="fa-solid fa-xmark"></i>
 		</button>
-
 	</div>
-	<!-- search-popup -->
 <!-- Start of Header section
 	============================================= -->
 
 <!-- Start of Banner section
 	============================================= -->
 	<section id="vt-banner" class="vt-banner-section txt_item_active position-relative">
-		<div class="vt-vertical-shape txt_item_active"></div>
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="vt-banner-shape">
 			<svg width="711" height="781" viewBox="0 0 711 781" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g style="mix-blend-mode:overlay" filter="url(#filter0_f_267_3604)">
@@ -585,8 +585,8 @@
 <!-- Start of Service section
 	============================================= -->
 	<section id="vt-service" class="vt-service-section pt-120 pb-90 position-relative">
-		<span class="vt-service-shape position-absolute"><img src="assets/img/shape/logo_shape_3.svg" alt=""></span>
-		<div class="container">
+		<span class="vt-service-shape appear_top position-absolute"><img src="assets/img/shape/logo_shape_3.svg" alt=""></span>
+		<div class="container"> 
 			<div class="vt-section-title headline pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
 					Industries we serve
@@ -605,6 +605,11 @@
 								<h3 class="href-underline"><a href="#">Strategic Planning</a></h3>
 								<p>We offer strategic planning to drive sustainable growth, operational efficiency, and long-term success.</p>
 							</div>
+							<div class="vt-vertical-shape-2 txt_item_active">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
@@ -617,6 +622,11 @@
 								<h3 class="href-underline"><a href="#">Operational Optimisation</a></h3>
 								<p>We optimize operations to enhance efficiency, reduce costs, and improve overall performance.</p>
 							</div>
+							<div class="vt-vertical-shape-2 txt_item_active">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
@@ -628,6 +638,11 @@
 							<div class="item-text headline pera-content">
 								<h3 class="href-underline"><a href="#">Financial Consulting</a></h3>
 								<p>Our financial consulting services drive growth, improve profitability, and ensure sound financial management.</p>
+							</div>
+							<div class="vt-vertical-shape-2 txt_item_active">
+								<span></span>
+								<span></span>
+								<span></span>
 							</div>
 						</div>
 					</div>
@@ -741,7 +756,7 @@
 					<div class="swiper-slide">
 						<div class="vt-service-item-2 position-relative">
 							<div class="item-img">
-								<img src="assets/img/bg/ser_1.jpg" alt="">
+								<img src="assets/img/bg/ser_2.jpg" alt="">
 							</div>
 							<div class="container">
 								<div class="item-text">
@@ -758,7 +773,7 @@
 					<div class="swiper-slide">
 						<div class="vt-service-item-2 position-relative">
 							<div class="item-img">
-								<img src="assets/img/bg/ser_1.jpg" alt="">
+								<img src="assets/img/bg/ser_3.jpg" alt="">
 							</div>
 							<div class="container">
 								<div class="item-text">
@@ -775,7 +790,7 @@
 					<div class="swiper-slide">
 						<div class="vt-service-item-2 position-relative">
 							<div class="item-img">
-								<img src="assets/img/bg/ser_1.jpg" alt="">
+								<img src="assets/img/bg/ser_4.jpg" alt="">
 							</div>
 							<div class="container">
 								<div class="item-text">
@@ -792,7 +807,7 @@
 					<div class="swiper-slide">
 						<div class="vt-service-item-2 position-relative">
 							<div class="item-img">
-								<img src="assets/img/bg/ser_1.jpg" alt="">
+								<img src="assets/img/bg/ser_5.jpg" alt="">
 							</div>
 							<div class="container">
 								<div class="item-text">
@@ -809,7 +824,7 @@
 					<div class="swiper-slide">
 						<div class="vt-service-item-2 position-relative">
 							<div class="item-img">
-								<img src="assets/img/bg/ser_1.jpg" alt="">
+								<img src="assets/img/bg/ser_6.jpg" alt="">
 							</div>
 							<div class="container">
 								<div class="item-text">
@@ -1080,7 +1095,7 @@
 								<li><i class="fas fa-star"></i></li>
 								<li><i class="fas fa-star"></i></li>
 							</ul>
-							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<p>Exceptional digital agency! Expertise shines through creative solutions. Timely delivery, excellent communication, and impressive results. Highly recommend their services!</p>
 							<div class="vt-testimonial-author d-flex align-items-center">
 								<div class="item-img">
 									<img src="assets/img/about/test2.jpg" alt="">
@@ -1101,7 +1116,7 @@
 								<li><i class="fas fa-star"></i></li>
 								<li><i class="fas fa-star"></i></li>
 							</ul>
-							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<p>Outstanding digital agency service! Exceptional creativity, strategic approach, and flawless execution. Highly recommend for all digital marketing needs.</p>
 							<div class="vt-testimonial-author d-flex align-items-center">
 								<div class="item-img">
 									<img src="assets/img/about/test3.jpg" alt="">
@@ -1143,7 +1158,7 @@
 								<li><i class="fas fa-star"></i></li>
 								<li><i class="fas fa-star"></i></li>
 							</ul>
-							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<p>Outstanding digital agency service! Exceptional creativity, strategic approach, and flawless execution. Highly recommend for all digital marketing needs.</p>
 							<div class="vt-testimonial-author d-flex align-items-center">
 								<div class="item-img">
 									<img src="assets/img/about/test2.jpg" alt="">
@@ -1164,7 +1179,7 @@
 								<li><i class="fas fa-star"></i></li>
 								<li><i class="fas fa-star"></i></li>
 							</ul>
-							<p>Innovative, efficient, and collaborative digital agency service delivering exceptional results. Highly recommend for top-tier expertise and professionalism.</p>
+							<p>Exceptional digital agency! Expertise shines through creative solutions. Timely delivery, excellent communication, and impressive results. Highly recommend their services!</p>
 							<div class="vt-testimonial-author d-flex align-items-center">
 								<div class="item-img">
 									<img src="assets/img/about/test3.jpg" alt="">
@@ -1323,7 +1338,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn btn-spin mt-15  text-center">
+				<div class="vt-btn btn-spin mt-10  text-center">
 					<a href="#">Browse All News</a>
 				</div>
 			</div>
@@ -1334,7 +1349,7 @@
 
 <!-- Start of Faq  section
 	============================================= -->
-	<section id="vt-faq" class="vt-faq-section pt-120 pb-200 position-relative">
+	<section id="vt-faq" class="vt-faq-section pt-120 pb-120 position-relative">
 		<div class="container">
 			<div class="vt-section-title headline text-center pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
@@ -1545,7 +1560,7 @@
 
 <!-- Start of Get in touch  section
 	============================================= -->
-	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.png">
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.jpg">
 		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
 		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
 		<div class="container">
